--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     provided 'com.google.dagger:dagger-compiler:2.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:recyclerview-v7:23.2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
@@ -47,4 +46,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.android.support:support-v4:23.2.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19' // mocking for unit tests
+    testCompile 'org.powermock:powermock-module-junit4:1.6.3' // powermock for mocking static
+    testCompile 'org.powermock:powermock-api-mockito:1.6.3' // powermock mockito integration
 }
